Bug 55315 - EDITING: Program crashes at autocompletion
Summary: EDITING: Program crashes at autocompletion
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: Other All
: medium critical
Assignee: Tomaz Vajngerl
URL:
Whiteboard: target:4.2.0 target:4.1.0.1 target:4.0.5
Keywords: regression
: 62167 64316 (view as bug list)
Depends on:
Blocks: AutoCorrect-Complete
  Show dependency treegraph
 
Reported: 2012-09-25 12:11 UTC by László Németh
Modified: 2016-10-20 10:29 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Crash log (90.10 KB, text/plain)
2012-09-25 12:11 UTC, László Németh
Details
Crash log 2 (95.45 KB, text/plain)
2012-09-25 12:12 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2012-09-25 12:11:27 UTC
Created attachment 67679 [details]
Crash log

Editing text (mostly modifying, pressing back button, extending the words) sometimes crashes the Writer, without document recovery. The attached logs suggest a problem within the new LatinLookupTree autocompletion class:

# Problematic frame:
# C  [libeditenglo.so+0x16b33c]  LatinLookupTree::suggestAutoCompletion() const+0x54
#

...


Stack: [0xbfc81000,0xbfcd1000],  sp=0xbfccc0d0,  free space=300k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
C  [libeditenglo.so+0x16b33c]  LatinLookupTree::suggestAutoCompletion() const+0x54
C  [libswlo.so+0x2b1526]  SwAutoCompleteWord::GetWordsMatching(String, std::vector<String, std::allocator<String> >&, unsigned char) const+0x7a
C  [libswlo.so+0x6fa163]  QuickHelpData::FillStrArr(SwWrtShell&, String const&, unsigned char)+0x58d
C  [libswlo.so+0x6faa29]  SwEditWin::ShowAutoTextCorrectQuickHelp(String const&, SvxAutoCorrCfg*, SvxAutoCorrect*, unsigned char)+0x9d
C  [libswlo.so+0x6fe52b]  SwEditWin::KeyInput(KeyEvent const&)+0x2929
C  [libvcllo.so+0x2c3609]  ImplHandleKey(Window*, unsigned short, unsigned short, unsigned short, unsigned short, unsigned char)+0x3fc
C  [libvcllo.so+0x2c5983]  ImplWindowFrameProc(Window*, SalFrame*, unsigned short, void const*)+0x1c8
C  [libvclplug_gtklo.so+0x41511]  SalFrame::CallCallback(unsigned short, void const*) const+0x21
C  [libvclplug_gtklo.so+0x3c02f]  GtkSalFrame::doKeyCallback(unsigned int, unsigned int, unsigned short, unsigned char, unsigned int, unsigned short, bool, bool)+0xbb
C  [libvclplug_gtklo.so+0x3dbac]  GtkSalFrame::IMHandler::signalIMCommit(_GtkIMContext*, char*, void*)+0x13a
Comment 1 László Németh 2012-09-25 12:12:16 UTC
Created attachment 67680 [details]
Crash log 2
Comment 2 olddeath 2012-11-01 22:23:38 UTC
Do you recall whether you passed the boundary between two words when going back? (e.g. did you go back to a location within the word you were just typing or did you go back to a previous word?)

Any chance you could get the line number where the crash happened and not only the assembler instruction line?
Comment 4 László Németh 2012-11-24 10:32:57 UTC
Tomaz, please have a look for this bug. Crashes have occurred on non-ASCII (in my case, Hungarian) texts too often (per day) for full-time Writer users. Thanks, László

olddeath: within the words. I have also extended the lookuptree_test.cxx to reproduce this bug, but my attempt was too simple to detect the error.
Comment 5 Tomaz Vajngerl 2012-12-03 06:58:00 UTC
(In reply to comment #4)
> Tomaz, please have a look for this bug. Crashes have occurred on non-ASCII
> (in my case, Hungarian) texts too often (per day) for full-time Writer
> users. Thanks, László
> 
> olddeath: within the words. I have also extended the lookuptree_test.cxx to
> reproduce this bug, but my attempt was too simple to detect the error.

Hi,

Now that I am back from vacation I will try to fix this bug ASAP.

Regards, Tomaž
Comment 6 Michael Meeks 2012-12-05 14:02:47 UTC
Are you still seeing this Laszlo ?
Comment 7 László Németh 2012-12-05 22:04:18 UTC
Tomaž: Thanks in advance! I'm sorry for the little information.
Tomaž, Michael: next couple of days I will test this issue again, and report the results.
Comment 8 László Németh 2013-02-19 13:44:49 UTC
I edited some documents with enabled autocompletion last months, but this problem didn't occur, so I closed this issue. Thanks, László
Comment 9 László Németh 2013-06-05 09:31:30 UTC
Still problem:  https://bugs.launchpad.net/ubuntu/+source/libreoffice/+bug/1162191

A few days ago I switched off the autocompletion, because intensive editing causes similar halts of LibreOffice 4.0.2 and 4.0.3 (but now without debug information, so I was not sure the origin of the problem).
Comment 10 Commit Notification 2013-06-11 21:25:17 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=af3916f8ee5dbd5ccb3b8faca940b57ff2102d76

fdo#55315 Added simple Trie lookup tree for autocomplete words storage



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2013-06-17 18:00:34 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fd33a9b60d50e34a1b72a52f22d07da89f5bd3fc&h=libreoffice-4-1

fdo#55315 Added simple Trie lookup tree for autocomplete words storage


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Michael Stahl (allotropia) 2013-06-17 19:36:30 UTC
hopefully crashes should be fixed now with the new implementation
Comment 13 Commit Notification 2013-06-17 19:38:31 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=033d888b8afae92eb85c7d95bf677d4b7b6e1da0&h=libreoffice-4-0

fdo#55315 Added simple Trie lookup tree for autocomplete words storage


It will be available in LibreOffice 4.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Michael Stahl (allotropia) 2013-06-19 22:16:08 UTC
*** Bug 64316 has been marked as a duplicate of this bug. ***
Comment 15 Michael Stahl (allotropia) 2013-08-18 10:00:46 UTC
*** Bug 62167 has been marked as a duplicate of this bug. ***