sw/inc/acmplwrd.hxx
@@ -23,7 +23,7 @@
 #include <deque>
 
 #include <editeng/swafopt.hxx>
-#include <editeng/LatinLookupTree.hxx>
+#include <editeng/Trie.hxx>
 
 class SwDoc;
 class SwAutoCompleteWord_Impl;
@@ -38,7 +38,7 @@ class SwAutoCompleteWord
 
     /// contains extended strings carrying source information
     editeng::SortedAutoCompleteStrings m_WordList;
-    LookupTree* m_LookupTree;
+    editeng::Trie m_LookupTree;
     SwAutoCompleteStringPtrDeque aLRULst;
 
     SwAutoCompleteWord_Impl* pImpl;
