editeng/Library_editeng.mk
@@ -116,6 +116,7 @@ $(eval $(call gb_Library_add_exception_objects,editeng,\
     editeng/source/lookuptree/LatinLookupTree \
     editeng/source/lookuptree/LatinTreeNode \
     editeng/source/lookuptree/Node \
+    editeng/source/lookuptree/Trie \
 ))
 
 # add libraries to be linked to editeng; again these names need to be given as
